Refactor workspace page into dedicated layout components

--- a/src/app/pages/workspace/workspace.page.html
+++ b/src/app/pages/workspace/workspace.page.html
@@ -1,3 +1,6 @@
 <div class="app">
-  <app-workspace [vm]="vm"></app-workspace>
+  <app-workspace-header [vm]="vm"></app-workspace-header>
+  <app-workspace-sidebar [vm]="vm"></app-workspace-sidebar>
+  <app-workspace-viewer [vm]="vm"></app-workspace-viewer>
+  <app-workspace-footer [vm]="vm"></app-workspace-footer>
 </div>
