Fix workspace selection change handler

--- a/src/app/pages/workspace/components/sidebar/workspace-sidebar.component.html
+++ b/src/app/pages/workspace/components/sidebar/workspace-sidebar.component.html
@@ -62,7 +62,8 @@
             <select
               id="workspace-select"
               [value]="session.activeWorkspaceId ?? ''"
-              (change)="vm.onWorkspaceSelected($event.target.value)"
+              #workspaceSelect
+              (change)="vm.onWorkspaceSelected(workspaceSelect.value)"
               [disabled]="vm.sessionLoading()"
             >
               <option value="" disabled>{{ 'sidebar.session.workspacePlaceholder' | t }}</option>
