Refine environment configs and gate workspace access

--- a/src/app/pages/landing/components/footer/landing-footer.component.html
+++ b/src/app/pages/landing/components/footer/landing-footer.component.html
@@ -9,5 +9,6 @@
   <div class="footer__details">
     <span>© {{ currentYear }} {{ appName }}</span>
     <span>Desarrollado por {{ appAuthor }}</span>
+    <span class="footer__environment">Entorno: {{ environmentLabel }}</span>
   </div>
 </footer>
