--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -12,5 +12,5 @@
   </section>
 
   <app-landing-footer [appName]="appName" [version]="version" [currentYear]="currentYear"
-    [appAuthor]="appAuthor"></app-landing-footer>
+    [appAuthor]="appAuthor" [environmentLabel]="environmentLabel"></app-landing-footer>
 </div>
