--- a/src/app/pages/workspace/components/footer/workspace-footer.component.html
+++ b/src/app/pages/workspace/components/footer/workspace-footer.component.html
@@ -9,5 +9,6 @@
   <div class="footer__details">
     <span>© {{ vm.currentYear }} {{ vm.appName }}</span>
     <span>Desarrollado por {{ vm.appAuthor }}</span>
+    <span class="footer__environment">Entorno: {{ vm.environmentLabel }}</span>
   </div>
 </footer>
