Add landing store map with clickable info bubble

--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -9,6 +9,8 @@
       (fileUploadKeydown)="onFileUploadKeydown($event)" (fileDragOver)="onFileDragOver($event)"
       (fileDragLeave)="onFileDragLeave($event)" (fileDrop)="onFileDrop($event)"
       (openFilePicker)="openPdfFilePicker()"></app-landing-dropzone>
+
+    <app-store-map></app-store-map>
   </section>
 
   <app-landing-footer [appName]="appName" [version]="version" [currentYear]="currentYear"
